# livesplit-wys

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml
src/: gamemaker.rs  lib.rs  settings.rs
