[package]
name = "livesplit-wys"
version = "0.1.0"
edition = "2021"

[dependencies]
asr = { git = "https://github.com/LiveSplit/asr", features = [
    "alloc", # Working with allocations.
    "derive", # Defining your own settings structs and converting endianness.
    "signature", # Scanning signatures.
] }
ron = "0.8"
serde = { version = "1", features = ["derive"] }

# Bytemuck can be used to define structs that are being read from the game's process.
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true

[profile.release.build-override]
opt-level = 0
